--- a/ansible/roles/nginx-conf/templates/default.conf.j2
+++ b/ansible/roles/nginx-conf/templates/default.conf.j2
@@ -19,20 +19,14 @@ server {
         }
 
         location ~ \.php$ {
+            fastcgi_pass   127.0.0.1:9000;        
             try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_index index.php;
-            fastcgi_pass  unix:/var/run/php-fpm/www.sock;
-            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include       fastcgi_params;
+            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
         }
 
-        location ~ /\.ht {
-            deny  all;
-        }
-
-        location ~ /\.svn {
-            deny  all;
-        }
-
+        location ~ /\.(ht|svn|git) {
+            deny all;
+        }  
 }
