--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -24,12 +24,13 @@ server {
     #error_page 404 /404.html;
 
     location ~ \.php$ {
-        
-        fastcgi_pass   127.0.0.1:9000;        
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_index index.php;
+        fastcgi_pass  unix:/var/run/php-fpm/www.sock;     
         try_files $uri =404;
-        include       fastcgi_params;
         fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
         fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
+        include       fastcgi_params;
     }
 
     location ~ /\.(ht|svn|git) {
