--- a/ansible/roles/nginx-conf/templates/default.conf.j2
+++ b/ansible/roles/nginx-conf/templates/default.conf.j2
@@ -19,7 +19,9 @@ server {
         }
 
         location ~ \.php$ {
-            fastcgi_pass   127.0.0.1:9000;        
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_index index.php;
+            fastcgi_pass  unix:/var/run/php-fpm/www.sock;         
             try_files $uri =404;
             include       fastcgi_params;
             fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
